force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/Estimated_Enrollment_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Estimated Enrollment Mapping</label>
    <pluralLabel>Estimated Enrollment Mappings</pluralLabel>
</CustomObject>