force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/fields/Estimated_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Enrollment__c</fullName>
    <label>Estimated Enrollment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>