force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/fields/Opp_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Role__c</fullName>
    <label>Opp Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>