force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/fields/Program_Family__c.field-meta.xml
<CustomField>
    <fullName>Program_Family__c</fullName>
    <label>Program Family</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>