force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Opp_Owner_Role__c</columns>
    <columns>Estimated_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>