force-app/main/default/objects/Estimated_Enrollment_Mapping__mdt/listViews/All_x.listView-meta.xml
<ListView>
    <fullName>All_x</fullName>
    <columns>MasterLabel</columns>
    <columns>Program_Family__c</columns>
    <columns>Opp_Owner_Role__c</columns>
    <columns>Estimated_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>